lab1/Test/L1-A-7-23.cmm
int nC6nJ9oTN4kKtkh 
;
int D ( struct UQvUgcv cIXx7gATrY , struct {
  int t_z0X90aoRl92E2Hv ;
}heXiKWmSqy ) {
  int AP0DOWkD8oAxkB [ 36544975 ] = m7z6ccm65uBzLtxJ 
    = T8ul >= - QoMPKA6jruOtLvqiBG [ liqQk_ || X && QG5Vgqpj2HTw 
    + ! ! iMEpQJjxmfeGZhU1FS ( sH , v1ACP24hloAw ^!= ( 
    MmGtPDO3i || IsZlYQxesf9ifImCI == ( fHWbbxPu6MlsC 
    = ex62jmUMom || KguMsSp5tdHY < ( Czoy362lG4kdB <= 
    bw / ( nqW || B5ek > OLtr3CMfA ) / DUH29LU1Hnsf ) 
    ) ) . YGE_swr5YeajNlk1Iv - 1470548833.1061325975 . 
    OnBFtRPKtbi . eh2sac8AaCzcL1ZVg8 * ! 1013393226 ) 
    . uJsMNVMIg08mQC * AYd0CnFV / ! PNglqY9d3 ( ) ] , 
    i ;
}
float ;
int Lsf5zZIHDrc , OnPsuE 

;
int C5pvumOxH3fHvA2N0xJ ( ) {
  c8XrHtcA ;
}
struct eNV3vKuTigG52 dcqoo2QC 
;
struct PEK_OZtqNY cFcyotJoXa2g3iIqXsi5 ( ) {
}
struct HTXRaAw7d4POi5Veuhd9 ;
struct YBwKVVRY2K ;
int dZ3_c2QDGSjnkOLa ( ) {
  struct JT8MxSqCqObl {
    int PuxaDM5 ;
    int FKuXiZJ0wMIvcOkEH28 ;
  }tOw6oqcHTX ;
  if ( ClDuqoMlW1M88MqeY )   if ( rUcW ) {
    int WBV5cnl7 ;$
    while ( lfY8jyk42xbUd_dmOf )     EDPMM9GiboH1 
      ;

  }else   return RouTlVUayEp_a ;


}
int ;
int ;
int ;
int T2gQQ31uY4t ( ) {
  if ( iP6dbzFGuQqffVeYY2bz )   GWeEAvJzRFv8druF ;
else   if ( ddAyft )   zDagDu ;


}
int M1KM ( ) {
  while ( W )   while ( Ug )   HcTmW4mT1or7b2UR9U 
    ;


  kWU ;
}
int ;
